@@ -45,13 +45,7 @@ class DataFiles
 	// Convert a string to OS-specific line endings
 	public function osLineEndings ($string)
 	{
-		// Different line ending styles
-		$eol_styles = array ("\r\n", "\r", "\n");
-
-		// Actual consersion
-		$string = str_replace ($eol_styles, PHP_EOL, $string);
-
-		return $string;
+		return preg_replace ('/\r\n|\r|\n/', PHP_EOL, $string);
 	}
 
 	public function saveJSON ($file, array $contents = array ())
