@@ -3,6 +3,7 @@ Changes by Jacob Barkdull 2017-08-09
 * Fixed: Posting a comment with required fields always threw an exception.
 * Fixed: Page reload when editing a comment when the e-mail field is disabled.
 * Improved: Admin comment moderation thread page "Back" button style.
+* Improved: Operating system specific line ending style conversation.
 * JavaScript: Only iterate over non-inherited object properties.
 * Differentiate backend redirect vs intend to display a message.
 * Decouple user edit moderation from overall moderation.
